--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,12 @@
-<h1>Welcome to My Blog</h1>
-<% @articles.each do |article| %>
-  <div>
-    <h2><%= article.title %></h2>
-    <p><%= article.body %></p>
-  </div>
-<% end %>
+<!-- app/views/articles/index.html.erb -->
+<h1>Articles</h1>
+
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+      <%= link_to article.title, article_path(article) %>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to 'New Article', new_article_path %>
